Closed Bug 83336 Opened 24 years ago Closed 24 years ago

Crash trying to view contents of local directory file:///c|\

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Windows 98
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bmartin, Assigned: adamlock)

References

Details

Attachments

(1 file)

Latest mfcembed dated: 05-30-01 O/S: Win98 System: Dell Latitude CPi 400MHz 128MB RAM Steps: 1. Download latest embed-win32.zip and extract file 2. Launch mfcembed.exe 3. Enter file:///c|/ in the URL text field to view contents of the directory Results: mfcembed caused invalid page fault in module xpcom.dll at 015f:60e9a870 select close mfcembed caused invalid page fault in module mfc42.dll
*** Bug 85969 has been marked as a duplicate of this bug. ***
Crash is occurring in nsStreamConverterService. Probably the converter that turns a directory listing into HTML/RDF is missing. Checking further.
Crash is triggered by missing http-index-format stream converter object implemented by mozilla/xpfe/components/directory and part of appcomps.dll. This causes a null pointer to be passed into a hash table lookup which then crashes. Patch follows to insert pointer check. Getting directory viewer to actually work in embedding is more involved because of how the viewer is packaged and some issues with the chrome.
r=rpotts
sr=darin (i think i filed a dupe of this a while back... probably assigned it to valeski). we'll hit this anytime someone asks for a stream converter that doesn't exist.
Fix is checked in (to trunk)
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Clean up verification of dated code change bus
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: