Added null pointer check to prevent crash when stream converter is missing. b=83336 r=rpotts@netscape.com sr=darin@netscape.com